# dlt-expectation-util

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
dlt_expectation_util/: __init__.py  expect.py  fake_dlt.py  validation.py
tests/: conftest.py  test_validation.py
