[tool.poetry]
name = "dlt-expectation-util"
version = "0.1.1"
description = ""
authors = ["Tim Dikland <tim.dikland@databricks.com>"]
readme = "README.md"
packages = [{include = "dlt_expectation_util"}]

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.4.1"
black = "^23.7.0"
ruff = "^0.0.277"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
